--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
   <script type="text/javascript" src="js/dialog.js"></script>
 
 </head>
+<style>
+  body {
+    background: #333;
+  }
+
+  div {
+    margin: auto;
+    width: 960px;
+  }
+</style>
+
 
 <body>
-  <div id="game">
-
-  </div>
+  <div id="game"/>
 </body>
 
 </html>
